# kije

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/lukin/: App.qml  Main.qml
examples/routing/: Router.qml
examples/simple-edit/: App.qml
examples/widget-embed/: WidgetEmbed.qml
examples/widgets-runner/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/code/: dock_private.cpp  kije_action.cpp  kije_action.h  kije_action_p.h  kije_app.cpp  kije_app.h  kije_app_abstract.cpp  kije_app_doc.cpp  kije_app_doc_p.h  kije_page.cpp  kije_page.h  kije_page_p.h  kije_plugin.cpp  kije_widget_embed.cpp  kije_widget_embed.h  kije_widget_embed_p.h  kije_window.cpp  kije_window.h  kijetesantakalu_plugin.cpp  toolbar_private.cpp  toolbar_private.h
source/code/headers/: dock_private.h  kije_plugin.h  kijetesantakalu_plugin.h  toolbar_private.h
source/code/headers/router/: jsfunction.h  router.h  router_p.h  routerslot.h  routertree.h
source/code/router/: jsfunction.cpp  router.cpp
source/resources/: qmldir
source/resources/controls/: ToolBar.qml
source/resources/controls/action/: Action.qml
source/resources/controls/actions/: EditAction.qml
source/resources/controls/applicationwindow/: ApplicationWindow.qml  PrivateStackView.qml
source/resources/controls/dock/: DockBox.qml  DockItem.qml
source/resources/controls/toolbar/: PrivateActionDelegate.qml  PrivateExpandingAction.qml  PrivateShadowedRectangle.qml  ToolBar.qml
source/resources/controls/welcome/: WelcomeItem.qml  WelcomeScreen.qml  WelcomeSection.qml
